cmake_minimum_required(VERSION 3.4.0)
add_compile_options(-std=c++11)
project(data_structure)

add_executable(sort sort.cpp)
# add_executable(search search.cpp)
# add_executable(recursion recursion.cpp)
# add_executable(Recursion_binarySearch Recursion_binarySearch.cpp)
# add_executable(permutation permutation.cpp)
# add_executable(removeDuplicates removeDuplicates.cpp)
